update todo list
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/TODO
+++ b/TODO
@@ -4,12 +4,11 @@ TODO
 Release 0.1
 -----------
 
-State file
 Basic shell, should be it's own script, aliases, help
     * This is basically done just need to make sure everything is set
 Getting started guide (docs) use markdown
-Specify set(s) to build
 Comment some code
+State files are done, need code for resuming
 
 Release 0.2
 -----------
