--- a/TODO
+++ b/TODO
@@ -15,6 +15,8 @@ Rake task for install/tests etc
 Split bash into modules
 Check config for errors and die quickly if there is
 each bash function should exit upon failure
+use playman/layman for adding overlays. 
+Paludis should probably make use of update.rb after sync's
 
 Next
 ----
