freshen is now becoming a target command
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/man/athenry-target.1
+++ b/man/athenry-target.1
@@ -33,6 +33,9 @@ Custom runs the smae commands as stage3 plus installs overlays and sets you may 
 .TP
 .BI setup 
 Populates the initial chroot directory with your stage tarball and portage snapshot
+.TP
+.BI freshen
+Updates chroot
 .SH SEE ALSO
 Website: http://gregf.github.com/athenry/
 .SH AUTHOR
