it's info not target...
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/man/athenry-info.1
+++ b/man/athenry-info.1
@@ -1,7 +1,7 @@
-.TH athenry-info "Jan 30 2010" "" "Athenry"
+.TH athenry-info 1 "Jan 30 2010" "" "Athenry"
 
 .SH NAME:
-athenry target [OPTIONS] [COMMAND]
+athenry info [OPTIONS] [COMMAND]
 .SH DESCRIPTION:
 Displays some useful information about athenry its chroots
 .SH GLOBAL OPTIONS:
