Apply the man page patch provided by mike. I never claimed I could spell, or speak english for that matter, but god damn! Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/man/athenry-info.1
+++ b/man/athenry-info.1
@@ -3,14 +3,14 @@
 .SH NAME:
 athenry info [OPTIONS] [COMMAND]
 .SH DESCRIPTION:
-Displays some useful information about athenry its chroots
+Displays some useful information about athenry and available chroots.
 .SH GLOBAL OPTIONS:
 .TP
 .BI -c, --chroot 
 Use the specified chroot directory.
 .TP
 .BI -p, --snapshoturl
- Use the specified snapshot url.
+Use the specified snapshot url.
 .TP
 .BI  -s, --stageurl
 Use the specified stage url.
@@ -22,23 +22,23 @@ Display version information
 Show an overview of the commandline options.
 .TP
 .BI -t, --trace
-Display backtrace when an error occurs
+Display a backtrace when an error occurs.
 .SH COMMANDS:
 .TP
 .BI env
-Print Athenry's settings
+Print Athenry's settings.
 .TP
 .BI chroots 
-Prints a simple list of chroots on your system
+Prints a simple list of chroots on your system.
 .TP
 .BI sync 
-Displays the last time the portage tree was updated and the next safe update
+Displays the last time the portage tree was updated and the next safe update.
 .TP
 .BI errors
-Displays the last five build failures
+Displays the last five build failures.
 .TP
 .BI builds
-List of all your chroots and when they were last modified
+List of all your chroots and when they were last modified.
 .SH SEE ALSO
 Website: http://gregf.github.com/athenry/
 .SH AUTHOR
