--- a/man/athenry-make.1
+++ b/man/athenry-make.1
@@ -3,33 +3,33 @@
 .SH NAME:
 athenry make [OPTIONS] [COMMAND]
 .SH DESCRIPTION:
-Creates compressed images of your chroots
+Creates compressed images of your chroots.
 .SH GLOBAL OPTIONS:
 .TP
 .BI -c, --chroot 
 Use the specified chroot directory.
 .TP
 .BI -p, --snapshoturl
- Use the specified snapshot url.
+Use the specified snapshot url.
 .TP
 .BI  -s, --stageurl
 Use the specified stage url.
 .TP
 .BI -v, --version
-Display version information
+Display version information.
 .TP
 .BI h, --help
 Show an overview of the commandline options.
 .TP
 .BI -t, --trace
-Display backtrace when an error occurs
+Display a backtrace when an error occurs.
 .SH COMMANDS:
 .TP
 .BI bzip2 
-Makes a bzip2 file of the specified chroot
+Makes a bzip2 file of the specified chroot.
 .TP
 .BI gzip2
-Makes a gzip file of the specified chroot
+Makes a gzip file of the specified chroot.
 .SH SEE ALSO
 Website: http://gregf.github.com/athenry/
 .SH AUTHOR
