--- a/man/athenry-resume.1
+++ b/man/athenry-resume.1
@@ -10,19 +10,19 @@ Tries to resume from where you last left your build.
 Use the specified chroot directory.
 .TP
 .BI -p, --snapshoturl
- Use the specified snapshot url.
+Use the specified snapshot url.
 .TP
 .BI  -s, --stageurl
 Use the specified stage url.
 .TP
 .BI -v, --version
-Display version information
+Display version information.
 .TP
 .BI h, --help
 Show an overview of the commandline options.
 .TP
 .BI -t, --trace
-Display backtrace when an error occurs
+Display a backtrace when an error occurs.
 .SH SEE ALSO
 Website: http://gregf.github.com/athenry/
 .SH AUTHOR
