--- a/man/athenry-rescue.1
+++ b/man/athenry-rescue.1
@@ -3,26 +3,26 @@
 .SH NAME:
 athenry rescue [OPTIONS]
 .SH DESCRIPTION:
-Simple command to chroot into the specified chroot. Great for fixing any problems you may have or to use the chroot in general.
+A simple command to chroot into the specified chroot. Great for fixing any problems you may have, or to use the chroot in general.
 .SH GLOBAL OPTIONS:
 .TP
 .BI -c, --chroot 
 Use the specified chroot directory.
 .TP
 .BI -p, --snapshoturl
- Use the specified snapshot url.
+Use the specified snapshot url.
 .TP
 .BI  -s, --stageurl
 Use the specified stage url.
 .TP
 .BI -v, --version
-Display version information
+Display version information.
 .TP
 .BI h, --help
 Show an overview of the commandline options.
 .TP
 .BI -t, --trace
-Display backtrace when an error occurs
+Display a backtrace when an error occurs.
 .SH SEE ALSO
 Website: http://gregf.github.com/athenry/
 .SH AUTHOR
