--- a/man/athenry.1
+++ b/man/athenry.1
@@ -3,51 +3,51 @@
 .SH NAME:
 athenry [OPTIONS] [COMMAND]
 .SH DESCRIPTION:
-Athenry will use system configuration files you provide to build Gentoo Stage tarballs for installation or chroots using freshly rolled x86 or amd64 installs.
+Athenry will use system configuration files you provide, to build Gentoo Stage tarballs for installation or chroots, using freshly rolled x86 or amd64 installs.
 .SH GLOBAL OPTIONS:
 .TP
 .BI -c, --chroot 
 Use the specified chroot directory.
 .TP
 .BI -p, --snapshoturl
- Use the specified snapshot url.
+Use the specified snapshot url.
 .TP
 .BI  -s, --stageurl
 Use the specified stage url.
 .TP
 .BI -v, --version
-Display version information
+Display version information.
 .TP
 .BI h, --help
 Show an overview of the commandline options.
 .TP
 .BI -t, --trace
-Display backtrace when an error occurs
+Display a backtrace when an error occurs.
 .SH COMMANDS:
 .TP
 .BI build
-Executes a single command on the given chroot <step>
+Executes a single command on the given chroot <step>.
 .TP
 .BI clean
-Cleans up any mess made
+Cleans up any mess made.
 .TP
 .BI help
 Display global or [command] help documentation.
 .TP
 .BI rescue
-Chroot into the current stage to perform commands manually
+Chroot into the current stage to perform commands manually.
 .TP
 .BI resume
-Resume from last saved state
+Resume from last saved state.
 .TP
 .BI setup
-Fetches files and creates necessary directories
+Fetches files and creates necessary directories.
 .TP
 .BI shell
- Run Athenry commands directly through an irb like shell
+Run Athenry commands directly through an irb like shell.
 .TP
 .BI target
-Starts building the target stage specified
+Starts building the target stage specified.
 .SH SEE ALSO
 Website: http://gregf.github.com/athenry/
 .SH AUTHOR
