--- a/man/athenry.1
+++ b/man/athenry.1
@@ -3,7 +3,7 @@
 .SH NAME:
 athenry [OPTIONS] [COMMAND]
 .SH DESCRIPTION:
-Athenry will use system configuration files you provide, to build Gentoo Stage tarballs for installation or chroots, using freshly rolled x86 or amd64 installs.
+Athenry uses the system configuration files that you supply, to build a custom installable tarball or chroot.
 .SH GLOBAL OPTIONS:
 .TP
 .BI -c, --chroot 
